--- a/tox.ini
+++ b/tox.ini
@@ -30,8 +30,8 @@ deps =
     pep8-naming
 commands =
     pflake8 -v src
-    isort --check-only --diff src/queue2io.py
-    autopep8 --diff src/queue2io.py
+    isort --check-only --diff src/mqtt2gpio/
+    autopep8 --diff src/mqtt2gpio/
 
 
 [testenv:unit]
