refactor for packaging

--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ deps =
     pyproject-flake8
     pep8-naming
 commands =
-    pflake8 -v src
+    pflake8 src
     isort --check-only --diff src/mqtt2gpio/
     autopep8 --diff src/mqtt2gpio/
 
@@ -44,3 +44,10 @@ deps =
 commands =
     coverage run --source=. -m pytest -v --tb native
     coverage report
+
+[testenv:build]
+description = Build package
+deps =
+    build
+commands =
+    python -m build
