--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [build-system]
-requires = ["setuptools >= 42"]
+requires = ["setuptools >= 59"]
 build-backend = "setuptools.build_meta"
 
 
-[tool.pflake8]
+[tool.flake8]
 max-line-length = 99
 
 [tool.autopep8]
