test script call

--- a/tox.ini
+++ b/tox.ini
@@ -34,16 +34,14 @@ commands =
     autopep8 --diff src/mqtt2gpio/
 
 
-[testenv:unit]
-description = Run unit tests
+[testenv:test]
+description = Run tests
 deps =
     pytest
-    ipdb
-    logassert
-    coverage[toml]
+    paho-mqtt
+    gpiozero
 commands =
-    coverage run --source=. -m pytest -v --tb native
-    coverage report
+    {toxinidir}/tests/test-all.sh pi
 
 [testenv:build]
 description = Build package
